<resources>
    <string name="app_name">Magpie</string>
    <string name="login_text">Login</string>
    <string name="pass_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Create a new account</string>
    <string name="account_btn">Account</string>
    <string name="signout_btn">Sign Out</string>
    <string name="signup_logo">Magpie</string>
    <string name="add_email">Email...</string>
    <string name="add_password">Password...</string>
    <string name="confirm_pwd">Confirm your password...</string>
    <string name="signup_page_btn">Sign Up !</string>
    <string name="signup_login_btn">Already have an account?</string>
    <string name="login_logo">Magpie</string>
    <string name="login_username">Username...</string>
    <string name="login_password">Password...</string>
    <string name="login_signup_btn">Create an account</string>
    <string name="bottom_ac_text">Account</string>
    <string name="bottom_home_text">Home</string>
    <string name="welcome_txt">Welcome To Magpie</string>
    <string name="welcome_signup_btn">Sign Up</string>
    <string name="welcome_login_btn">Login to your account</string>
    <string name="acc_title_text">Account</string>
    <string name="acc_original_pwd">Your current password...</string>
    <string name="acc_change_pwd">New password...</string>
    <string name="acc_confirm_btn">Change Password</string>
    <string name="post_time_modified">blog_date</string>
    <string name="post_username">User Email</string>
    <string name="post_content">Cotent</string>
    <string name="new_post_desc">Add new post...</string>
    <string name="new_post_btn">Add new post</string>
    <string name="add_new_post">Add new post</string>
    <string name="signup_username">Username...</string>
    <string name="post_edit_btn">Edit post</string>
    <string name="acc_title">Manage Your Account</string>
    <string name="edit_post_title">Edit Your Post</string>
    <string name="edit_content" />
    <string name="edit_post_btn">Edit post</string>
    <string name="edit_del_btn">Delete post</string>
</resources>
